--- a/src/blocks/icon/styles/style.scss
+++ b/src/blocks/icon/styles/style.scss
@@ -1,16 +1,12 @@
 .wp-block-coblocks-icon {
 	&__inner {
 		display: inline-block;
-	}
-
-	&__svg-wrapper {
-		align-items: center;
-		display: flex;
-		justify-content: center;
+		vertical-align: middle;
 
 		> svg {
 			fill: currentColor;
 			height: 100%;
+			vertical-align: middle;
 			width: 100%;
 		}
 	}
