Icon size on inspector controls

--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -22,6 +22,8 @@
 				fill: #191e23;
 				margin: 0;
 				padding: 0;
+				height: 30px;
+				width: 30px;
 			}
 		}
 		.editor-block-types-list__item-icon {
