Tweak icon search inserter

--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -2,17 +2,22 @@
 .coblocks-icon-types-list {
 	max-height: 270px;
 	overflow-y: scroll;
+	padding: 0;
 
 	.editor-block-types-list__list-item {
-		display: inline-block;
-		width: auto;
+		margin: 0 0 8px;
 
 		.components-button {
+			align-items: center;
 			background: transparent;
 			border-color: #ebecee;
 			box-shadow: none;
 			color: #555e66;
+			display: flex;
 			height: auto;
+			justify-content: center;
+			padding: 12px 0;
+			width: 100%;
 
 			&:focus {
 				background: #f8faf9;
@@ -23,15 +28,16 @@
 
 			svg {
 				fill: #191e23;
+				height: 20px;
 				margin: 0;
 				padding: 0;
-				height: 30px;
-				width: 30px;
+				width: 20px;
 			}
 		}
+
 		.editor-block-types-list__item-icon {
 			line-height: 0;
-			padding: 14px 7px;
+			padding: 0;
 		}
 
 		&.selected-svg {
