--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -43,7 +43,7 @@
 
 .coblocks-icon-types-list {
 	margin-top: 0;
-	max-height: 220px;
+	max-height: 170px;
 	overflow-y: scroll;
 	padding: 4px 0 0 0;
 
@@ -58,6 +58,10 @@
 
 		@media screen and (max-width: 782px) {
 			width: 31.5%;
+		}
+
+		@media screen and (max-width: 600px) {
+			width: 31.1%;
 		}
 
 		.components-button {
@@ -89,11 +93,11 @@
 
 			svg {
 				fill: #3f464d;
-				height: 18px;
+				height: 20px;
 				margin: 0;
 				overflow: hidden;
 				padding: 0;
-				width: 18px;
+				width: 20px;
 			}
 		}
 
