--- a/src/blocks/features/styles/style.scss
+++ b/src/blocks/features/styles/style.scss
@@ -20,13 +20,6 @@
 		position: relative;
 		width: 100%;
 		word-break: break-word;
-		// margin-bottom: 30px;
-
-		// @media (min-width: 600px) {
-		// 	margin-left: 15px;
-		// 	margin-right: 15px;
-		// 	margin-bottom: 0;
-		// }
 
 		h1,
 		h2,
@@ -34,8 +27,8 @@
 		h4,
 		h5,
 		h6 {
-			margin-top: 0;
-			padding-top: 0;
+			// margin-top: 0;
+			// padding-top: 0;
 		}
 
 		p {
@@ -51,7 +44,7 @@
 		}
 	}
 
-	&__inner{
+	&__inner {
 		@media (min-width: 600px) {
 			align-items: flex-start;
 			display: flex;
