--- a/src/blocks/features/styles/style.scss
+++ b/src/blocks/features/styles/style.scss
@@ -21,6 +21,14 @@
 		width: 100%;
 		word-break: break-word;
 
+		&:nth-of-type(1) {
+			margin-left: 0;
+		}
+
+		&:nth-of-type(3) {
+			margin-right: 0;
+		}
+
 		h1,
 		h2,
 		h3,
@@ -50,77 +58,50 @@
 			display: flex;
 			flex-wrap: wrap;
 		}
+	}
+}
 
-		&.has-1-columns {
+// [data-columns="3"] {
 
-			.wp-block-coblocks-feature {
-				margin: 0;
+// 	.wp-block-coblocks-feature:nth-of-type(2) {
+// 		margin-right: 0;
+// 	}
+
+// }
+
+
+[data-columns="3"] {
+	.wp-block-coblocks-feature__inner {
+
+		@media (min-width: 900px) {
+			flex-wrap: nowrap;
+		}
+	}
+
+	.wp-block-coblocks-feature {
+		flex-basis: 29%;
+
+		@media (max-width: 899px) {
+			&:nth-of-type(1) {
+				width: 100%;
+			}
+
+			&:nth-of-type(2),
+			&:nth-of-type(3) {
+				// margin-bottom: 30px;
+			}
+
+			&:nth-of-type(3) {
+				// margin-left: 0;
 			}
 		}
 
-		&.has-2-columns {
-
-			.wp-block-coblocks-feature {
-
-				&:nth-of-type(1) {
-					margin-left: 0;
-				}
-
-				&:nth-of-type(2) {
-					margin-right: 0;
-				}
-			}
-		}
-
-		&.has-3-columns {
-			@media (min-width: 900px) {
-				flex-wrap: nowrap;
-			}
-
-			.wp-block-coblocks-feature {
-
-				&:nth-of-type(1) {
-					margin-left: 0;
-				}
-
-				&:nth-of-type(2) {
-					margin-right: 0;
-
-					@media (min-width: 900px) {
-						margin-right: 7px;
-						margin-left: 7px;
-					}
-				}
-
-				&:nth-of-type(3) {
-					margin-right: 0;
-				}
-
-				@media (max-width: 899px) {
-
-					&:nth-of-type(1) {
-						width: 100%;
-					}
-
-					&:nth-of-type(2),
-					&:nth-of-type(3) {
-						margin-bottom: 30px;
-					}
-
-					&:nth-of-type(3) {
-						margin-left: 0;
-					}
-				}
-
-				@media (max-width: 599px) {
-
-					&:nth-of-type(1),
-					&:nth-of-type(2),
-					&:nth-of-type(3) {
-						margin: 0 0 30px 0;
-					}
-				}
-			}
-		}
+		// @media (max-width: 599px) {
+		// 	&:nth-of-type(1),
+		// 	&:nth-of-type(2),
+		// 	&:nth-of-type(3) {
+		// 		margin: 0 0 30px 0;
+		// 	}
+		// }
 	}
 }
