Fix: One column Features block is not full width #185

--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -118,6 +118,17 @@
 		}
 	}
 
+	//one column improvements
+	&[data-columns="1"]{
+		.wp-block-coblocks-features {
+			&__inner {
+				> .editor-inner-blocks{
+					width: 100%;
+				}
+			}
+		}
+	}
+
 	> .editor-block-mover,
 	> .block-list-appender {
 		display: none;
