Fixes: Features block is missing textColor controls #184

--- a/src/blocks/features/styles/style.scss
+++ b/src/blocks/features/styles/style.scss
@@ -58,6 +58,18 @@
 			display: flex;
 			flex-wrap: wrap;
 		}
+		&.has-text-color{
+			p,
+			a,
+			h1,
+			h2,
+			h3,
+			h4,
+			h5,
+			h6 {
+				color: inherit;
+			}
+		}
 	}
 }
 
