--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -19,6 +19,18 @@
 				}
 			}
 
+			//fix color for heading
+			.wp-block-heading{
+				h1,
+				h2,
+				h3,
+				h4,
+				h5,
+				h6{
+					color: inherit !important;
+				}
+			}
+
 			// Hide first mover.
 			[data-type="coblocks/feature"] {
 				.wp-block:first-child {
