--- a/src/blocks/features/styles/style.scss
+++ b/src/blocks/features/styles/style.scss
@@ -36,14 +36,19 @@
 			margin-right: 0;
 		}
 
+		.wp-block-coblocks-icon {
+			margin-bottom: 1.25em;
+		}
+
 		h1,
 		h2,
 		h3,
 		h4,
 		h5,
 		h6 {
-			// margin-top: 0;
-			// padding-top: 0;
+			margin: 0;
+			margin-bottom: .7em;
+			padding: 0;
 		}
 
 		p {
