--- a/src/blocks/shape-divider/styles/style.scss
+++ b/src/blocks/shape-divider/styles/style.scss
@@ -2,6 +2,10 @@
 	display: flex;
 	flex-direction: column;
 
+	svg{
+		fill: currentColor;
+	}
+
 	&__alt-wrapper {
 		background-color: currentColor;
 	}
