--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -19,8 +19,8 @@
 				}
 			}
 
-			//fix color for heading
-			.wp-block-heading{
+			// Fix color for heading.
+			.wp-block-heading {
 				h1,
 				h2,
 				h3,
