--- a/src/blocks/icon/styles/style.scss
+++ b/src/blocks/icon/styles/style.scss
@@ -1,7 +1,20 @@
 .wp-block-coblocks-icon {
+	position: relative;
+
 	&__inner {
+		position: relative;
 		display: inline-block;
 		vertical-align: middle;
+
+		> a{
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			border: 0px !important;
+			outline: none;
+			text-shadow: none;
+			box-shadow: none !important;
+		}
 
 		> svg {
 			fill: currentColor;
