Fix: Image Overlay on Feature block is positioning on top of the content #198

--- a/src/blocks/features/styles/style.scss
+++ b/src/blocks/features/styles/style.scss
@@ -87,6 +87,12 @@
 			color: inherit;
 		}
 	}
+
+	.wp-block-coblocks-feature__inner{
+		> *{
+			position: relative;
+		}
+	}
 }
 
 // [data-columns="3"] {
