--- a/src/extensions/advanced-controls/styles/editor.scss
+++ b/src/extensions/advanced-controls/styles/editor.scss
@@ -1,4 +1,15 @@
 .editor-styles-wrapper {
+
+	.wp-block.editor-block-list__block[data-coblocks-bottom-spacing="1"][data-type="core/image"] {
+		.editor-rich-text {
+			display: none;
+		}
+
+		.wp-block-image img {
+			vertical-align: bottom;
+		}
+	}
+
 	.wp-block.editor-block-list__block[data-coblocks-top-spacing="1"]:not(:first-child) {
 		margin-top: 0 !important;
 
@@ -51,6 +62,8 @@
 			}
 		}
 	}
+
+
 
 	//Make sure block is on the top z-index.
 	.wp-block {
