--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -19,16 +19,22 @@
 				}
 			}
 
-			// Fix color for heading.
+			// Fix color for headings.
+			p,
 			.wp-block-heading {
+
 				h1,
 				h2,
 				h3,
 				h4,
 				h5,
-				h6{
+				h6 {
 					color: inherit !important;
 				}
+			}
+
+			p {
+				color: inherit !important;
 			}
 
 			// Hide first mover.
