Hide insertion point for the icon block (in the feature block)

--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -148,6 +148,7 @@
 	}
 
 	.wp-block[data-type="core/heading"],
+	.wp-block[data-type="coblocks/icon"],
 	.wp-block[data-type="core/paragraph"] {
 		.editor-block-list__insertion-point {
 			display: none;
