Rename Template Inserter to Inserter

--- a/src/blocks/inserter/styles/editor.scss
+++ b/src/blocks/inserter/styles/editor.scss
@@ -1,4 +1,4 @@
-.editor-block-list__block[data-type="coblocks/template-inserter"] {
+.editor-block-list__block[data-type="coblocks/inserter"] {
 
 	.components-placeholder__label {
 
