Enhance the inserter modal pop-up entry #137

--- a/src/blocks/inserter/styles/editor.scss
+++ b/src/blocks/inserter/styles/editor.scss
@@ -43,6 +43,8 @@
 	&.coblocks-modal-component {
 		max-width: 1000px;
 		width: 100%;
+		animation: none;
+		animation-fill-mode: none;
 
 		.components-modal__header {
 			margin-bottom: 0;
