--- a/src/sidebars/disable-blocks/styles/editor.scss
+++ b/src/sidebars/disable-blocks/styles/editor.scss
@@ -1,71 +1,99 @@
 .coblocks-modal-component--disableBlocks{
-	.coblocks-disable-block-item-list{
-		display: flex;
-	    flex-wrap: wrap;
-	    list-style: none;
-	    overflow: hidden;
-	    padding: 2px 0;
 
-	    &--item{
-	    	display: block;
-		    margin: 0 0 25px;
-		    padding: 0 4px;
-		    width: 120px;
-	    }
-	}
-	.coblocks-disable-block-item{
+	// .components-base-control__field {
+	// 	display: none;
+	// }
 
-		&--button{
-			align-items: stretch;
-		    background: transparent;
-		    border: 1px solid transparent;
-		    border-radius: 4px;
-		    color: #32373c;
-		    cursor: pointer;
-		    display: flex;
-		    flex-direction: column;
-		    font-size: 13px;
-		    justify-content: center;
-		    padding: 5px;
-		    position: relative;
-		    transition: all .05s ease-in-out;
-		    width: 100%;
-		    word-break: break-word;
-		    height: auto;
-		    box-shadow: none;
-		    &.block-disabled{
-    			opacity: 0.3;
-    			&, &:focus:enabled{
-    				background: #e3e4e7;
-    				border-color: #e3e4e7;
-    			}
-		    }
-		    &:focus:enabled{
-		    	background: transparent;
-		    	border: 0px;
-		    }
-		}
+	&--search {
+		border-bottom: 1px solid #e2e4e7;
 
-		&--icon{
-			svg{
-				max-height: 24px;
-			    max-width: 24px;
-			    min-height: 20px;
-			    min-width: 20px;
+		input[type="search"] {
+			border-radius: 4px;
+			display: block;
+			font-size: 16px;
+			margin: 16px 0;
+			padding: 11px 16px;
+			position: relative;
+			z-index: 1;
+
+			@media (min-width: 600px) {
+				font-size: 13px;
 			}
 		}
 	}
 
-	&--search{
-		padding: 20px 0px 10px;
+	.coblocks-disable-block-item-list{
+		display: flex;
+		flex-wrap: wrap;
+		list-style: none;
+		overflow: hidden;
+		padding: 2px 0;
+
+		&--item{
+			display: block;
+			margin: 0 0 25px;
+			padding: 0 4px;
+			width: 120px;
+		}
+	}
+
+	.coblocks-disable-block-item{
+
+		&--button{
+			align-items: stretch;
+			background: transparent;
+			border: 1px solid transparent;
+			border-radius: 4px;
+			color: #32373c;
+			cursor: pointer;
+			display: flex;
+			flex-direction: column;
+			font-size: 13px;
+			justify-content: center;
+			padding: 5px;
+			position: relative;
+			transition: all .05s ease-in-out;
+			width: 100%;
+			word-break: break-word;
+			height: auto;
+			box-shadow: none;
+			border: 1px solid rgba(25, 30, 35, 0.2);
+
+			&.block-disabled {
+
+				opacity: 0.3;
+
+				&, &:focus:enabled{
+					background: #e3e4e7;
+					border-color: #e3e4e7;
+				}
+			}
+			&:focus:enabled{
+				background: transparent;
+				border: 0;
+			}
+		}
+
+		&--icon{
+
+			svg{
+				max-height: 24px;
+				max-width: 24px;
+				min-height: 20px;
+				min-width: 20px;
+			}
+		}
 	}
 }
-.coblocks-disable-block-warning{
+
+.coblocks-disable-block-warning {
 	max-height: auto !important;
+
 	.components-popover__content{
 		color: #b52727;
-		text-align: center;
-		padding: 8px;
 		min-height: 80px;
+		padding: 8px;
+		text-align: center;
 	}
 }
+
