--- a/src/sidebars/block-manager/styles/editor.scss
+++ b/src/sidebars/block-manager/styles/editor.scss
@@ -1,4 +1,5 @@
 .components-modal--coblocks-block-manager {
+	min-height: 80%;
 
 	@media (min-width: 600px) {
 		width: 550px;
@@ -127,17 +128,8 @@
 			}
 		}
 
-		&:not(.block-disabled):hover::before {
+		&:not(.block-disabled):hover {
 			background: #edeff0;
-			border-radius: 4px;
-			bottom: 0;
-			content: "";
-			display: block;
-			left: 0;
-			position: absolute;
-			right: 0;
-			top: 0;
-			z-index: -1;
 		}
 
 		&:hover,
