--- a/src/sidebars/block-manager/styles/editor.scss
+++ b/src/sidebars/block-manager/styles/editor.scss
@@ -46,6 +46,10 @@
 					margin-left: 16px;
 					margin-right: 0;
 				}
+
+				.components-toggle-control__label {
+					margin-bottom: 0;
+				}
 			}
 		}
 
