--- a/src/sidebars/block-manager/styles/editor.scss
+++ b/src/sidebars/block-manager/styles/editor.scss
@@ -6,12 +6,22 @@
 	}
 
 	.coblocks-block-manager__search {
+		background: #fff;
+		margin: -16px -16px 0;
+		padding: 16px;
+		position: sticky;
+		top: 56px;
+		z-index: 10;
+
+		.components-base-control__field {
+			margin: 0;
+		}
 
 		input[type="search"] {
 			border-radius: 4px;
 			display: block;
 			font-size: 16px;
-			margin: 16px 0;
+			margin: 0;
 			padding: 11px 16px;
 			position: relative;
 			z-index: 1;
@@ -65,7 +75,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		list-style: none;
-		margin: 0 -6px -12px;
+		margin: 0 -4px -12px;
 		overflow: hidden;
 		padding: 2px 0 0;
 
