--- a/src/sidebars/block-manager/styles/editor.scss
+++ b/src/sidebars/block-manager/styles/editor.scss
@@ -104,7 +104,7 @@
 		justify-content: center;
 		padding: 0;
 		position: relative;
-		// transition: all .05s ease-in-out;
+		transition: all .05s ease-in-out;
 		width: 100%;
 		word-break: break-word;
 
@@ -216,7 +216,6 @@
 		&-icon {
 			border-radius: 4px;
 			padding: 12px 20px;
-			// transition: all .05s ease-in-out;
 
 			.editor-block-icon {
 				margin-left: auto;
@@ -229,7 +228,6 @@
 				max-width: 24px;
 				min-height: 20px;
 				min-width: 20px;
-				// transition: all .15s ease-out;
 			}
 		}
 
